# TruckersMPLauncherUnofficial

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.MD  build.sh  compileImages.sh  compileJSX.sh  setupHTMLDebug.sh
frontend/: compile.js  package-lock.json  package.json
frontend/src/: serverStatusR.jsx
frontend/src/serverStatus/: serverModulesContainer.jsx
resources/html/: community.html  events.html  root.html  serverStatus.html  serverStatus.js  settings.html  versions.html  versions.js
src/: downloader.rs  main.cpp  main.rs  public_values.rs
src/api/: TruckersMPAPI.cpp  TruckersMPAPI.h  file.rs
src/base64/: README.md  decode.h
src/events/: Events.cpp  Events.h
src/files/: mod.rs  truckersmp_cli.rs
src/install/: Steam.cpp  Steam.h
src/launcher/: Launcher.cpp  Launcher.h  mod.rs  steam.rs  utils.rs  vdf.rs
src/launcher/game/: ats.rs  ets2.rs  game.rs  mod.rs
src/launcher/os/: system.rs
src/react/: FrontendServer.cpp  FrontendServer.h
src/ui/: MainUI.cpp  MainUI.h  MainUI.ui  error_dialog.rs  main.rs  mod.rs  window.rs
src/utils/: ErrorHandling.h  FileUtils.cpp  FileUtils.h  NetworkingUtils.cpp  NetworkingUtils.h  OSDetect.h
