[package]
name = "TruckersMPLauncherUnofficial"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31.0"
eframe = "0.31.0"
once_cell = "1.20.3"
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "stream"] }
futures = "0.3"
keyvalues-serde = "0.2.2"
serde = { version = "1.0.218", features = ["derive"] }
keyvalues-parser = "0.2.0"
serde_json = "1.0.139"
rust-embed="8.5.0"
md-5 = "0.11.0-pre.4"
base16ct = { version = "0.2.0", features = ["alloc"] }
regex = "1.11.1"
tokio = "1.43.0"